--- a/src/assets/components/bootstrap4/_alert.scss
+++ b/src/assets/components/bootstrap4/_alert.scss
@@ -49,3 +49,7 @@
     @include alert-variant(theme-color-level($color, $alert-bg-level), theme-color-level($color, $alert-border-level), theme-color-level($color, $alert-color-level));
   }
 }
+
+.USAD{
+  color : #8f0808 !important;
+}
